# BoidsSimulator

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: colors.h++  main.c++  pch.h++
src/config/: simulation_config.h++  system_config.h++  theme_config.h++  ui_config.h++
src/core/: boids_packet.h++  core.c++  core.h++  simulation_parameters.h++
src/manager/: manager_entity.c++  manager_entity.h++  manager_ui.c++  manager_ui.h++
src/manager/entity/: components.h++  draw_entities.c++  update_boids.c++  update_position.c++  update_velocity.c++
src/manager/ui/: slider.c++  slider.h++
